<resources>
    <string name="app_name">My Zoo</string>
    <string name="button_send">Send</string>
    <string name="title_activity_bottom_nav" translatable="false">BottomNav</string>
    <string name="title_home">Animals</string>
    <string name="title_shop">Shop</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_breeding">Breeding</string>
    <string name="bunny">Bunny</string>
    <string name="chicken">Chicken</string>
    <string name="cow">Cow</string>
    <string name="elephant">Elephant</string>
    <string name="hippo">Hippo</string>
    <string name="child">Human Child</string>
    <string name="monkey">Monkey</string>
    <string name="pig">Pig</string>
    <string name="tiger">Tiger</string>
    <string name="turtle">Turtle</string>
    <string name="coins">Coins</string>
    <string name="food">Food</string>
    <string name="average_price">50 Coins</string>
    <string name="low_price">25 Coins</string>
    <string name="high_price">100 Coins</string>
    <string name="food2">Food:</string>
    <string name="level">Level:</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="custom">Custom</string>
    <string name="random">Random</string>
    <string name="gender">Gender</string>
    <string name="title_map">Map</string>
    <string name="baby_bones">Baby Bones</string>
    <string name="meat">Meat</string>
    <string name="water">Water</string>
    <string name="pea">Pea</string>
    <string name="bread">Bread</string>
    <string name="donut">Donut</string>
    <string name="animals">Animals</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_kill">Are you sure you want to kill %s?</string>
    <string name="yes">Yes</string>
    <string name="kill_deleted">%s is slaughtered…</string>
    <string name="cancel">Cancel</string>
    <string name="hp_bar">HP Bar</string>
    <string name="image">image</string>
    <string name="attack">Attack</string>
</resources>
