<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_child_care_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_breeding"
        android:icon="@drawable/ic_call_merge_black_24dp"
        android:title="@string/title_breeding" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
