<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <ImageView
                    android:id="@+id/button_bunny"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#00ff00"
                    android:clickable="true"
                    android:contentDescription="@string/bunny"
                    android:focusable="true"
                    android:hapticFeedbackEnabled="false"
                    android:onClick="buyItem"
                    android:tag="bunny"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/bunny" />

                <ImageView
                    android:id="@+id/button_chicken"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#9C27B0"
                    android:clickable="true"
                    android:contentDescription="@string/chicken"
                    android:focusable="true"
                    android:onClick="buyItem"
                    app:srcCompat="@drawable/chicken" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/price_bunny"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:text="@string/average_price"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/price_chicken"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:text="@string/average_price"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/button_cow"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#00BCD4"
                    android:clickable="true"
                    android:contentDescription="@string/cow"
                    android:focusable="true"
                    android:onClick="buyItem"
                    app:srcCompat="@drawable/cow" />

                <ImageView
                    android:id="@+id/button_elephant"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#FF5722"
                    android:clickable="true"
                    android:contentDescription="@string/elephant"
                    android:focusable="true"
                    android:onClick="buyItem"
                    app:srcCompat="@drawable/elephant" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/price_cow"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:text="@string/average_price"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/price_elephant"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:text="@string/average_price"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/button_hippo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#FFEB3B"
                    android:clickable="true"
                    android:contentDescription="@string/hippo"
                    android:focusable="true"
                    android:onClick="buyItem"
                    app:srcCompat="@drawable/hippo" />

                <ImageView
                    android:id="@+id/button_child"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#009688"
                    android:clickable="true"
                    android:contentDescription="@string/child"
                    android:focusable="true"
                    android:onClick="buyItem"
                    app:srcCompat="@drawable/human_child" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/price_hippo"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:text="@string/average_price"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/price_child"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:text="@string/high_price"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/button_monkey"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#ED7FFF"
                    android:clickable="true"
                    android:contentDescription="@string/monkey"
                    android:focusable="true"
                    android:onClick="buyItem"
                    app:srcCompat="@drawable/monkey" />

                <ImageView
                    android:id="@+id/button_pig"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#CDDC39"
                    android:clickable="true"
                    android:contentDescription="@string/pig"
                    android:focusable="true"
                    android:onClick="buyItem"
                    app:srcCompat="@drawable/pig" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/price_monkey"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:text="@string/average_price"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/price_pig"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:text="@string/low_price"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/button_tiger"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#2196F3"
                    android:clickable="true"
                    android:contentDescription="@string/tiger"
                    android:focusable="true"
                    android:onClick="buyItem"
                    app:srcCompat="@drawable/tiger" />

                <ImageView
                    android:id="@+id/button_turtle"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#9C27B0"
                    android:clickable="true"
                    android:contentDescription="@string/turtle"
                    android:focusable="true"
                    android:onClick="buyItem"
                    app:srcCompat="@drawable/turtle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/price_tiger"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:text="@string/average_price"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/price_turtle"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:text="@string/average_price"
                    android:textAlignment="center" />
            </TableRow>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>