<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/animalImage3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_child_care_black_24dp" />


    <TextView
        android:id="@+id/animal_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/animalImage3"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/animalImage3"
        tools:text="Dolphin" />

    <TextView
        android:id="@+id/animal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_toEndOf="@id/animalImage3"
        android:textSize="21sp"
        tools:text="Flipper" />

    <TextView
        android:id="@+id/animal_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/animalImage3"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/animalImage3"
        tools:text="@string/male" />

    <TextView
        android:id="@+id/food_animal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/animalImage3"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/hp_animal_counter"
        android:text="@string/food2" />

    <TextView
        android:id="@+id/level_animal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/food_animal"
        android:layout_alignBottom="@id/level_animal_counter"
        android:text="@string/level" />

    <TextView
        android:id="@+id/hp_animal_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/animalImage3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        tools:text="100" />

    <TextView
        android:id="@+id/level_animal_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hp_animal_counter"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        tools:text="0" />

    <TextView
        android:id="@+id/animalID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/level_animal"
        android:layout_alignTop="@id/animal_gender"
        android:enabled="false"
        android:textSize="0sp"
        tools:text="ID" />
</RelativeLayout>